--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -518,20 +518,20 @@ footer {
 
 .mc-field-group {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
+  height: 140px;
 }
 
 .mc-label {
   font-size: 1.5rem;
   display: inline-block;
-  margin-right: 10px;
 }
 
 #mce-EMAIL {
   border-radius: 2px;
   height: 40px;
-  margin-right: 10px;
   padding: 10px 15px;
   width: 300px;
 }
@@ -551,4 +551,14 @@ footer {
 #mc-embedded-subscribe:hover {
   background: #43A047;
   outline-color: #fff;
+}
+
+@media (min-width: 610px) {
+  .mc-field-group {
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    max-width: 530px;
+    margin: 0 auto;
+  }
 }
