--- a/css/front_in_campinas.css
+++ b/css/front_in_campinas.css
@@ -6,6 +6,20 @@
 	opacity: 0.15;
 }
 
+.bg-abstract {
+    position: absolute;
+    z-index: -1;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    overflow: hidden;
+    background-size: cover;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-image: url(/video/abstract_video_1.jpg);
+}
 
 
 #subscribe-text-field {
